modified readResultLog, appendResult and appendStatus method